@@ -1,3 +1,5 @@
+- stop putting element "type" in output
+
 0.05 2019-12-31
 - make XML::LibXML be only suggested, not required
 
